# G6_Panels_Test_Firmware

./: .gitignore  README.md  pyproject.toml
test_firmware/hacks/single_led_with_rev_leds/src/: main.cpp  utilities.cpp
test_firmware/rev_led_check/src/: main.cpp
test_firmware/single_led/: platformio.ini
test_firmware/single_led/src/: constants.cpp  constants.h  constants_v0_1.cpp  constants_v0_2.cpp  constants_v0_3.cpp  main.cpp  main_led_check.cpp  main_minimal.cpp  main_pattern.cpp  main_pattern_batch0.1.3.cpp  main_single_led.cpp  main_single_led_batch0.1.3.cpp  utilities.cpp  utilities.h
test_firmware/single_led/src/apps/: dot.cpp  led_check.cpp  minimal.cpp  pattern.cpp  single_led.cpp
test_firmware/single_led/src/board/: board_config.cpp  board_config.h
test_firmware/single_led/src/common/: layout_map.cpp  layout_map.h  panel.cpp  panel.h
