[project]
authors = [{name = "Frank Loesche", email = "loeschef@janelia.hhmi.org"}]
name = "G6_Panels_Test_Firmware"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64", "osx-64"]

[tool.pixi.tasks]
deploy-single-led = { cmd = "pio run -e single_led --target upload", cwd = "test_firmware/single_led" }
deploy-pattern = { cmd = "pio run -e pattern --target upload", cwd = "test_firmware/single_led" }
deploy-led-check = { cmd = "pio run -e led_check --target upload", cwd = "test_firmware/single_led" }
deploy-minimal = { cmd = "pio run -e minimal --target upload", cwd = "test_firmware/single_led" }
"deploy-single-led-batch0.1.3" = { cmd = "pio run -e single_led_batch0_1_3 --target upload", cwd = "test_firmware/single_led" }
"deploy-pattern-batch0.1.3" = { cmd = "pio run -e pattern_batch0_1_3 --target upload", cwd = "test_firmware/single_led" }

[tool.pixi.dependencies]
platformio = ">=6.1.19,<7"
