[project]
authors = [{name = "Frank Loesche", email = "loeschef@janelia.hhmi.org"}]
name = "G6_Panels_Test_Firmware"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64", "osx-arm64", "osx-64"]

[tool.pixi.tasks]
"deploy-single-led-v0.1" = { cmd = "pio run -e single_led_v0_1 --target upload", cwd = "test_firmware/single_led" }
"deploy-single-led-v0.2" = { cmd = "pio run -e single_led_v0_2 --target upload", cwd = "test_firmware/single_led" }
"deploy-single-led-v0.3" = { cmd = "pio run -e single_led_v0_3 --target upload", cwd = "test_firmware/single_led" }
"deploy-pattern-v0.1"    = { cmd = "pio run -e pattern_v0_1 --target upload",    cwd = "test_firmware/single_led" }
"deploy-pattern-v0.2"    = { cmd = "pio run -e pattern_v0_2 --target upload",    cwd = "test_firmware/single_led" }
"deploy-pattern-v0.3"    = { cmd = "pio run -e pattern_v0_3 --target upload",    cwd = "test_firmware/single_led" }
"deploy-led-check-v0.1"  = { cmd = "pio run -e led_check_v0_1 --target upload",  cwd = "test_firmware/single_led" }
"deploy-led-check-v0.2"  = { cmd = "pio run -e led_check_v0_2 --target upload",  cwd = "test_firmware/single_led" }
"deploy-led-check-v0.3"  = { cmd = "pio run -e led_check_v0_3 --target upload",  cwd = "test_firmware/single_led" }
deploy-minimal           = { cmd = "pio run -e minimal --target upload",         cwd = "test_firmware/single_led" }

[tool.pixi.dependencies]
platformio = ">=6.1.19,<7"
